<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Manos Con Voz</string>
    <string name="action_settings">Configuración</string>
    <string name="autor">Por Citlalli y Flor</string>
    <string name="Enviar">Enviar</string>
    <string name="BuscarDispositivo">Buscar</string>
    <string name="Conectar">Conectar</string>
    <string name="MostrarEnlazados">Enlazados</string>
    <string name="ActivarBluetooth">Activar bluetooth</string>
    <string name="DesactivarBluetooth">Desactivar bluetooth</string>
    <string name="Confirmar">Confirmar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Salir">Salir</string>

    <!-- Mensajes -->
    <string name="SinConexion">Conexión actual: SIN CONEXIÓN</string>
    <string name="ConexionActual">Conexión actual:</string>
    <string name="ConectandoA">Conectando a</string>
    <string name="IniciandoDescubrimiento">Buscando dispositivos Bluetooth cercanos</string>
    <string name="ErrorIniciandoDescubrimiento">Error al iniciar búsqueda de dispositivos bluetooth</string>
    <string name="DetectadoDispositivo">Detectado dispositivo</string>
    <string name="FinBusqueda">Fin de la búsqueda</string>
    <string name="EnviandoMensaje">Enviando mensaje</string>
    <string name="MsgConfirmarConexion">¿Conectar al dispositivo</string>
    <string name="MsgErrorConexion">Error al enviar al mensaje: no hay conexiones activas</string>
    <string name="title_activity_menuprincipal">menuprincipal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
